--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gidz-dgpi.staruml-poc-gm-istd",
+    "name": "gidz-dgpi.staruml-istd-cmd",
     "version": "0.0.1",
     "description": "Beheren van iStandaard Common Modellen.",
     "keywords": [
