--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "staruml": ">=3.0.0"
     },
     "scripts": {
-        "test": "echo test"
+        "ModelIds": "echo test"
     },
     "dependencies": {
         "axios": "^1.9.0"
